--- a/eudevfin/mcm/src/main/resources/org/devgateway/eudevfin/mcm/pages/EditPersistedUserPage.html
+++ b/eudevfin/mcm/src/main/resources/org/devgateway/eudevfin/mcm/pages/EditPersistedUserPage.html
@@ -23,6 +23,7 @@
 						<div wicket:id="group"/>     
                         <div wicket:id="phone"/>
                         <div wicket:id="password"/>
+                        <div wicket:id="passwordCheck"/>
                         <div wicket:id="enabled"/>
                         <div wicket:id="persistedAuthorities"/>                        
                     </div>
@@ -33,7 +34,7 @@
                         </div>
                     </div>
                 </form>
-
+                <span wicket:id="feedback">feedback</span>
             </div>
         </div>
     </div>
