Improved dashboards page. (ODAEU-224)

--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsPage.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsPage.html
@@ -36,10 +36,10 @@
                         <thead>
                             <tr>
                                 <th>Net ODA</th>
-                                <th>2011</th>
-                                <th>2012</th>
-                                <th>2013</th>
-                                <th>2012 / 2013</th>
+                                <th wicket:id="tableYear1"/>
+                                <th wicket:id="tableYear2"/>
+                                <th wicket:id="tableYear3"/>
+                                <th wicket:id="tableYear4"/>
                             </tr>
                         </thead>
                         <tbody>
