--- a/eudevfin/mcm/src/main/resources/org/devgateway/eudevfin/mcm/pages/EditPersistedUserPage.html
+++ b/eudevfin/mcm/src/main/resources/org/devgateway/eudevfin/mcm/pages/EditPersistedUserPage.html
@@ -21,11 +21,12 @@
                         <div wicket:id="lastName"/>
                         <div wicket:id="email"/>
 						<div wicket:id="group"/>     
-                        <div wicket:id="phone"/>
+                        <div wicket:id="phone"/>                        
+                        <div wicket:id="passwordChange"/>
                         <div wicket:id="password"/>
                         <div wicket:id="passwordCheck"/>
-                        <div wicket:id="enabled"/>
-                        <div wicket:id="persistedAuthorities"/>                        
+                        <div wicket:id="persistedAuthorities"/>        
+                        <div wicket:id="enabled"/>                
                     </div>
                     <div class="row">
                         <div class="span4">
