Add print page button. (ODAEU-224)

--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsPage.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsPage.html
@@ -136,6 +136,13 @@
 
         </div> <!-- /row -->
 
+        <div class="row">
+            <div class="span6 offset5">
+                <button id="print-page" class="btn btn-large btn-success" type="button">Print the page</button>
+            </div>
+            <br/><br/><br/>
+        </div>
+
     </div> <!-- /container -->
 </wicket:extend>
 </body>
