--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsPage.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsPage.html
@@ -12,10 +12,10 @@
     <title>ODA at a Glance</title>
 
     <!-- load jquery UI css files -->
-    <link href="/css/theme/cupertino/jquery-ui-1.8.custom.css" rel="stylesheet" type="text/css"/>
+    <link href="css/theme/cupertino/jquery-ui-1.8.custom.css" rel="stylesheet" type="text/css"/>
 
     <!-- load general styles -->
-    <link href="/css/style.css" rel="stylesheet" type="text/css"/>
+    <link href="css/style.css" rel="stylesheet" type="text/css"/>
 </wicket:head>
 <body>
 <wicket:extend>
