fixed form submit url to work with non root contexts

--- a/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/cdf/pages/reports/ReportsExport.html
+++ b/eudevfin/cdf-wrapper/src/main/resources/org/devgateway/eudevfin/cdf/pages/reports/ReportsExport.html
@@ -26,7 +26,7 @@
 		<div class="row">
 			<br/><br/>
 			<div class="span6 offset2">
-				<form class="form-horizontal" action="/jasperreports/generate" method="post" onsubmit="target_popup(this)">
+				<form class="form-horizontal" action="jasperreports/generate" method="post" onsubmit="target_popup(this)">
 	                <input wicket:id="reportType" type="hidden"/>
 					<div class="control-group">
 						<label class="control-label" for="reportYear">Report Year</label>
