--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsPage.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/ReportsPage.html
@@ -19,7 +19,7 @@
 </wicket:head>
 <body>
 <wicket:extend>
-    <div id="oda-at-glance">
+    <div id="reports-page">
         <div class="container">
             <div class="row">
                 <div class="span12">
@@ -135,7 +135,7 @@
             </div> <!-- /row -->
 
         </div> <!-- /container -->
-    </div> <!-- /oda-at-glance -->
+    </div> <!-- /reports-page -->
 
     <div class="container">
         <div class="row">
