--- a/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/custom/CustomIdentificationDataTab.html
+++ b/eudevfin/dim/src/main/resources/org/devgateway/eudevfin/dim/pages/transaction/custom/CustomIdentificationDataTab.html
@@ -11,6 +11,7 @@
 <body>
 <wicket:extend>
     <div wicket:id="1aDataAsPerDate"/>
+    <div wicket:id="6aLevelOfCertainty"/>
 </wicket:extend>
 </body>
 </html>
