Create filters for custom dashboards. (ODAEU-230)

--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/CustomReportsPage.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/CustomReportsPage.html
@@ -14,12 +14,19 @@
                 <div class="span8 offset2 well">
                     <form wicket:id="form">
                         <div class="row">
-                            <div wicket:id="geopraphy"/>
+                            <div wicket:id="geography"/>
                             <div wicket:id="recipient"/>
+                            <div wicket:id="nationalInstitution"/>
+                            <div wicket:id="multilateralAgency"/>
+                            <div wicket:id="typeOfFlowbiMulti"/>
+                            <div wicket:id="typeOfAid"/>
                             <div wicket:id="sector"/>
                             <div wicket:id="year"/>
+                            <div wicket:id="startingYear"/>
+                            <div wicket:id="completitionYear"/>
                             <div wicket:id="cofinancingtransactionsonly"/>
                             <div wicket:id="cpaonly"/>
+                            <div wicket:id="humanitarianAid"/>
                         </div>
                         <br/>
                         <div class="row">
