--- a/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/CustomReportsPage.html
+++ b/eudevfin/reports-ui/src/main/resources/org/devgateway/eudevfin/reports/ui/pages/CustomReportsPage.html
@@ -22,11 +22,14 @@
                             <div wicket:id="typeOfAid"/>
                             <div wicket:id="sector"/>
                             <div wicket:id="year"/>
+                            <div wicket:id="typeOfExpenditure"/>
+                            <div wicket:id="valueOfActivity"/>
                             <div wicket:id="startingYear"/>
                             <div wicket:id="completitionYear"/>
                             <div wicket:id="cofinancingtransactionsonly"/>
                             <div wicket:id="cpaonly"/>
                             <div wicket:id="humanitarianAid"/>
+                            <div wicket:id="showRelatedBudgetCodes"/>
                         </div>
                         <br/>
                         <div class="row">
